--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 
+bild/*
+
 # Created by https://www.gitignore.io/api/linux,eclipse,java-web
 # Edit at https://www.gitignore.io/?templates=linux,eclipse,java-web
 
